# Robot-HP-Camera-System

./: .gitignore  .gitmodules  AGENT_RULES.md  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  README.md  SETUP_GUIDE.md  fastdds_peers.xml  namespace_plan.md  pisp_camera_config.yaml  pytest.ini  reset_hailo.sh  restart_revpi_rs485.sh  ros2_env.sh  run_all_three_v2.sh  run_gui_with_restart.sh  sim_auto_test.py  start_all.sh  start_rs485_revpi.sh  startup_log.txt  stop_all.sh  test_cpx_multi.py  test_cpx_read.py  test_cpx_rw.py  test_fresh.py  test_servo_connection.py  test_startup_cpx.py  test_sto.py
.agent/workflows/: camera-system-changes.md  safe_edit.md
.github/workflows/: ci_build.yml
backup/: libcamera_dual_node.cpp  system_csi_dual_model.launch.py
backups/revpi_ip_20260619_124141/: home__pi__deploy_revpi.sh  home__pi__ros2_ws__restart_revpi_rs485.sh  home__pi__ros2_ws__ros2_env.sh  home__pi__ros2_ws__scripts__start_all.sh  home__pi__start_all.sh
backups/stable_libcamera_20260129_1359/: README.md  implementation_plan.md  walkthrough.md
backups/working_20260128_1411/: run_all_three.sh  stop_all.sh
backups_pre_revert/: CartridgePage.qml  cartridge_controller.cpp  cartridge_controller.hpp  cartridge_providesystem_py_node.py
docs/: GUI_TOPIC_PERSISTENCE.md
docs/libcamera_dual_camera_system/backup/: run_all_three_v2.sh
revpi_backup/com_rs485/: CMakeLists.txt
revpi_backup/com_rs485/src/: rs485_bus_node.cpp
scripts/: check_revpi_ip_sync.sh  start_all.sh  update_revpi_ip.sh
scripts/camera_tools/: README.md  camera_roi.desktop  camera_roi.py  camera_roi.sh  grab_roi_frames.py  roi_pick.py  roi_picker.py  roi_picker_web.py  roi_preview.py
scripts_deploy/: entrypoint.sh  servo_connection_runner.py  setup_pi5.sh
src/: ROBOT_PROJECT_RULES.md  system_nodes_topics.md
src/DOBOT_6Axis_ROS2_V3/: README.md
src/DOBOT_6Axis_ROS2_V3/cr10_moveit/: package.xml
src/DOBOT_6Axis_ROS2_V3/cr12_moveit/: package.xml
src/DOBOT_6Axis_ROS2_V3/cr16_moveit/: package.xml
src/DOBOT_6Axis_ROS2_V3/cr3_moveit/: package.xml
src/DOBOT_6Axis_ROS2_V3/cr5_moveit/: package.xml
src/DOBOT_6Axis_ROS2_V3/cr7_moveit/: package.xml
src/DOBOT_6Axis_ROS2_V3/dobot_bringup_v3/: setup.py
src/DOBOT_6Axis_ROS2_V3/dobot_gazebo/: package.xml
src/DOBOT_6Axis_ROS2_V3/nova2_moveit/: package.xml
src/DOBOT_6Axis_ROS2_V3/nova5_moveit/: package.xml
src/bbox_drawer_cpp/launch/: overlay_two_cams.launch.py
src/bbox_drawer_cpp/src/: overlay_bboxes_node.cpp
src/com_rs485/: CMakeLists.txt  package.xml
src/com_rs485/src/: rs485_bus_node.cpp
src/csi_camera/: CMakeLists.txt
src/csi_camera/docs/: DUAL_CAMERA_GUIDE.md
src/csi_camera/launch/: camera_only.launch.py  camera_with_overlay.launch.py  dual_camera_system.launch.py
src/csi_camera/scripts/: picamera2_dual_node.py
src/csi_camera/src/: csi_camera_node.cpp.backup_20251231_124535  dual_csi_camera_node.cpp  libcamera_dual_node.cpp  serialized_dual_camera_node.cpp
src/fill_hp_gui/: package.xml  setup.cfg  setup.py
src/fill_hp_gui/fill_hp_gui/: main.py
src/fill_hp_gui/fill_hp_gui/qml/: Main.qml
src/fill_hp_gui/launch/: fill_hp_gui.launch.py
src/loadcell_ros2/: package.xml  setup.cfg  setup.py
src/loadcell_ros2/loadcell_ros2/: loadcell_node.py
src/robot_control_interfaces/: CMakeLists.txt  package.xml
src/robot_control_interfaces/action/: ExecuteMotion.action
src/robot_control_main/: CMakeLists.txt  gripper_festo_node.py  package.xml
src/robot_control_main/config/: joint_pose_params.yaml  vision_roi.yaml
src/robot_control_main/docs/: pending_sync_improvements.md  system_workflow_rules.md
src/robot_control_main/launch/: refactored_system.launch.py  robot_control_main_launch.py  robot_logic.launch.py  robot_with_gripper.launch.py
src/robot_control_main/src/: PIPELINE_TEST_GUIDE.md  Robot_logicbk_26-2.cpp  motion_executor.cpp  newrobot_logic_node.cpp  robot_logic_example.cpp  robot_logic_node.cpp  robot_logic_node_bk_1.cpp  vision_decision_node.cpp  walkthrough.md copy.resolved  walkthrough.md.resolved
src/ros2_qml_gui1/qml/: Main.qml  RobotControlPreview.qml
src/ros2_qml_gui1/src/: cam_node.cpp  (+2 more)
src/system_feed_cartridge/: CMakeLists.txt  CONFIG_FLOW_MANUAL.md  CONFIG_GUIDE.md  DOC_INDUSTRIAL_ARCHITECTURE.md  FUTURE_PLAN.md  PHYSICAL_LAYOUT.md  README.md  RULES.md  SYSTEM_DESCRIPTION.md  TROUBLESHOOTING_GUI_SYNC.md  package.xml  patch_gui.py  sensor_mapping.md
src/system_feed_cartridge/config/: cartridge_config.yaml  sensors.yaml
src/system_feed_cartridge/include/system_feed_cartridge/: cartridge_system.hpp
src/system_feed_cartridge/launch/: cartridge_production.launch.py  cartridge_test.launch.py
src/system_feed_cartridge/scripts/: cartridge_gui.py  cartridge_gui_web.py  cartridge_providesystem_py_node.py  cartridge_providesystem_py_node.py.bak_20260315_121441  cartridge_providesystem_py_node.py.pre_thread_pos.bak_20260401_161639  cartridge_robot.service  cartridge_system_py_node.py.ros1_backup  config.py  sim_auto_runner.py  sim_auto_test.py  start_cartridge_test.sh  test_thread_timeout.py
src/system_feed_cartridge/src/: cartridge_system_node.cpp
src/system_feed_cartridge/tests/: conftest.py  test_state_machine.py
src/unified_control_gui/: CMakeLists.txt  package.xml  qml.qrc
src/unified_control_gui/docs/: FIXES_APPLIED_SUMMARY.txt  ROBOT_MANUAL_CONTROL.md
src/unified_control_gui/include/unified_control_gui/: cam_node.hpp  cartridge_controller.hpp  hp_controller.hpp  robot_controller.hpp  scale_controller.hpp
src/unified_control_gui/qml/: CameraPage.qml  CameraView.qml  CartridgePage.qml  FillHpTab.qml  GlassHighlight.qml  HoverHint.qml  InkPage.qml  InkTab.qml  Main.qml  MotionButton.qml  MotionMouseArea.qml  ProductionTab.qml  ScreenshotButton.qml  SmartTextField.qml  SmartTextInput.qml  frm_settings.qml
src/unified_control_gui/scripts/: restart_gui.sh  restart_system_nodes.sh  start_all.sh  start_unified_system.sh  vfd_logic_node.py
src/unified_control_gui/src/: cam_node.cpp  cam_provider.cpp  cartridge_controller.cpp  hp_controller.cpp  main.cpp  robot_controller.cpp  scale_controller.cpp
(+19 files in other folders)
