<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fill_hp_gui</name>
  <version>0.1.0</version>
  <description>Standalone QML preview cho Fill HP Control. Tach roi unified_control_gui de iterate UI an toan.</description>
  <maintainer email="vjetstore.com@gmail.com">pi</maintainer>
  <license>Proprietary</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-pyqt5.qtquick</exec_depend>
  <exec_depend>qml-module-qtquick-controls2</exec_depend>
  <exec_depend>qml-module-qtquick-layouts</exec_depend>
  <exec_depend>qml-module-qtquick-window2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
