<?xml version="1.0"?>
<package format="3">
  <name>unified_control_gui</name>
  <version>1.0.0</version>
  <description>Unified control GUI for camera + cartridge system</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>dobot_msgs_v3</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
</package>
